# wigner-symbols

./: .gitignore  .travis.yml  LICENSE  README.md  changelog.md  wigner-symbols.cabal
.github/workflows/: build.yml
src/: BenchMain.hs  Common.hs  TestMain.hs  WignerSymbols.hs
src/WignerSymbols/: Internal.hs
tools/: cabal.config.example  clebschgordan.py  rrf-tabulate-build.sh  rrf-tabulate.hs  rrf.hs  rrf.sh  wigner_symbols.py
